Added the ability to modify the admin panel URI as well as the application timezone

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,13 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
+# Application timezone
+APP_TIMEZONE=UTC
+
+# Modify this value to define the URI that will be used for accessing the
+# CMS admin and content creator functionality. By default it's cms-admin.
+CMS_ADMIN_URI=cms-admin
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
